# grok-assistant

./: .gitignore  CLAUDE.md  DOCKER.md  MEMORY_AND_STORAGE.md  README.md  chat_app.py  docker-compose.yml  requirements.txt
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.local  Dockerfile.prod  README.md  __init__.py  alembic.ini  api.py  chat_app.py  docker-compose.yml  personas.py  pyproject.toml  requirements.txt  run_server.py  setup_ollama.sh  test_api.py
backend/alembic/: env.py
backend/alembic/versions/: 20251206_233023_baa388cd2c43_initial_schema.py
backend/app/: config.py  dependencies.py  main.py
backend/app/api/: assistants.py  chat_ws.py  conversations.py  messages.py  router.py  tts.py  users.py
backend/app/auth/: clerk.py  websocket.py
backend/app/db/: seed.py  session.py
backend/app/models/: __init__.py  assistant.py  base.py  conversation.py  message.py  user.py
backend/app/schemas/: assistant.py  conversation.py  message.py  user.py
backend/app/services/: assistant_generation_service.py  assistant_service.py  chat_ws_manager.py  chat_ws_service.py  conversation_service.py  letta_service.py  stt_service.py  supabase_storage_service.py  tts_service.py  tts_ws_service.py  user_service.py  voice_cloning_service.py
backend/scripts/: seed_db.py
frontend/: README.md  package-lock.json  package.json  proxy.ts
frontend/app/: layout.tsx  page.tsx
frontend/hooks/: use-assistants.ts  use-chat-websocket.ts  use-conversations.ts  use-generate-assistant.ts  use-mobile.ts  use-stt.ts  use-tts.ts
frontend/lib/: api.ts  (+4 more)
(+31 files in other folders)
